# llama.cpp

examples/: CMakeLists.txt
examples/smeralda-interface/: CMakeLists.txt  LlamaInterface.cpp  LlamaInterface.h  LlamaWrapper.cpp  LlamaWrapper.h  tokenizer.cpp
